--- a/.gitignore
+++ b/.gitignore
@@ -65,9 +65,6 @@ db.sqlite3-journal
 instance/
 .webassets-cache
 
-# more Flask stuff
-.flaskenv
-
 # Scrapy stuff:
 .scrapy
 
@@ -112,6 +109,11 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+
+# more Flask environment stuff
+.flaskenv
+settings.py
+
 
 # Spyder project settings
 .spyderproject
